name:                fay-d3
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/j-mueller/fay-d3
bug-reports:         https://github.com/j-mueller/fay-d3/issues
license:             MIT
license-file:        LICENSE
author:              Jann Müller
maintainer:          Jann Müller

-- copyright:
build-type:          Simple
cabal-version:       >=1.8

data-files: src/D3.hs

library
  hs-source-dirs: src
  exposed-modules: D3
  build-depends: 
      fay-base == 0.19.*,
      fay-text == 0.3.*
